--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,17 @@
               <li class="nav-item">
                 <a class="nav-link" aria-disabled="true">Pon tu espacio en Airbnb</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-disabled="true"><%= current_user.email if user_signed_in? %></a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Registrate</a></li>
-                  <li><a class="dropdown-item" href="#">Inicia sesion</a></li>
+                  <li><%= link_to "Registrate", new_user_registration_path, class: "dropdown-item" unless user_signed_in? %></li>
+                  <li><%= link_to "Iniciar Sesión", new_user_session_path, class: "dropdown-item" unless user_signed_in? %></li>
+                  <li><%= link_to "Cerrar Sesión", destroy_user_session_path, data: {turbo_method: :delete}, class:"dropdown-item"%></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Arrienda tu espacio</a></li>
                 </ul>
@@ -54,5 +58,7 @@
       </nav>
     </header>  
     <%= yield %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </body>
 </html>
